--- a/app/package.json
+++ b/app/package.json
@@ -1,19 +1,29 @@
 {
-  "name": "app",
-  "version": "1.0.0",
-  "main": "app.js",
+  "name": "sparta-test-app",
+  "version": "1.0.1",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "node seeds/seed.js",
+    "start": "node app.js",
+    "test": "npx mocha --exit"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "mongoose": "^8.18.1"
+    "ejs": "^3.1.9",
+    "express": "^4.14.0",
+    "faker": "^4.1.0",
+    "json2mongo": "^0.1.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.3"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^4.4.0",
+    "chai-jquery": "^2.0.0",
+    "jenkins-mocha": "^11.0.0",
+    "mocha": "^10.3.0",
+    "mocha-junit-reporter": "^1.12.1"
   }
 }
